# pytorch-profiling

./: .gitignore  README.md  pyproject.toml  runner.py
configs/: sleepy_data.yaml  training.yaml
src/pytorch_profiling/example/: data.py  vit.py
src/pytorch_profiling/utils/: callbacks.py  transforms.py
