[project]
name = "pytorch-profiling"
version = "0.0.1"

# TODO min,max
dependencies = [
    "lightning==2.3.0",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "wandb==0.17.2",
    "jsonargparse[signatures]>=4.27.7",
    "scipy==1.14.1",
]

[tool.black]
line-length = 79
include = '\.pyi?$'

[tool.isort]
profile = "black"
